# modbus_client_BB

./: CMakeLists.txt  README.md  mk.sh  run.sh
inc/: config.h  dataq.h  json.h  modbus.h  modbus_if.h  mqtt.h
src/: .json.c.swp  .main.c.swl  .main.c.swm  .main.c.swn  .main.c.swo  .main.c.swp  config.c  dataq.c  json.c  main.c  modbus.c  modbus_if.c  mqtt.c
thirparty/cJSON/: CMakeLists.txt
thirparty/libmodbus/: CMakeLists.txt
